--- a/FoodAgentDotNet/FoodAgentDotNet.csproj
+++ b/FoodAgentDotNet/FoodAgentDotNet.csproj
@@ -13,11 +13,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Prompts\GetCuisine\config.json" />
-    <EmbeddedResource Include="Prompts\GetCuisine\skprompt.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.29.0" />
@@ -29,6 +24,8 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="Plugins\" />
+    <Folder Include="Prompts\" />
   </ItemGroup>
 
 </Project>
